# Velocity

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  collect-bettingpros.yml  collect-fantasypros.yml  collect-historical-odds.yml  collect-mlb-props.yml  collect-odds.yml  live-slate-mlb.yml  live-slate.yml
datasets/: README.md
datasets/ncaaf/: boxscores_2002_2025.parquet  games.parquet
datasets/nfl/: games.parquet  plays.parquet
docs/: BACKTEST_NCAAF.md  BACKTEST_NFL.md  BUILD.md  BUILD_MLB.md  DATA_ACCESS.md  DATA_PROVIDERS.md  DESIGN.md  LAUNCH.md
scripts/: build_ncaaf_boxscores.py  build_nfl_pbp_datasets.py  collect_bettingpros.py  collect_fantasypros.py  collect_historical_odds.py  collect_mlb_props.py  collect_theoddsapi.py  grade_archive.py  pull_cfbd_lines.py  run_backtest_local.py  run_live_slate.py  run_real_backtest.py
tests/: conftest.py  test_backtest.py  test_baseball_rates.py  test_bet_log.py  test_cards.py  test_collect_historical_odds.py  test_devig.py  test_edge.py  test_game_mlb.py  test_game_ncaaf.py  test_game_nfl.py  test_grade_archive.py  test_ingest_bettingpros.py  test_ingest_fantasypros.py  test_ingest_mlb.py  test_ingest_ncaaf.py  test_ingest_nfl.py  test_ingest_theoddsapi.py  test_ingest_theoddsapi_mlb.py  test_io.py  test_live_slate.py  test_local.py  test_metrics.py  test_mlb_advanced.py  test_mlb_build.py  test_mlb_bullpen.py  test_mlb_context.py  test_mlb_people.py  test_mlb_stats.py  test_mlb_weather.py  test_odds.py  test_odds_adapter.py  test_park_factors.py  test_pit.py  test_player.py  test_portfolio.py  test_priors.py  test_props.py  test_props_mlb.py  test_props_slate.py  (+13 more)
tests/fixtures/: _generate.py  _generate_season.py  lines.csv  mlb_advanced.json  mlb_bullpen.json  mlb_context.json  mlb_hitting.json  mlb_lineups.json  mlb_people.json  mlb_pitching.json  mlb_schedule.json  mlb_team_hitting.json  mlb_team_pitching.json  mlb_team_splits.json  mlb_weather.json  nfl_games.csv  nfl_market.csv  nfl_plays.csv  nfl_season_games.csv  nfl_season_lines.csv  raw_cfbd_games.csv  raw_cfbd_plays.csv  raw_nfl_pbp.csv  raw_nfl_rosters.csv  raw_nfl_schedules.csv  theoddsapi_mlb.json  theoddsapi_mlb_props.json
velocity/: __init__.py
velocity/backtest/: __init__.py  engine.py
velocity/eval/: __init__.py  metrics.py
velocity/features/: __init__.py  baseball.py  player.py  priors.py  scores.py  team.py
velocity/ingest/: __init__.py  bettingpros.py  fantasypros.py  local.py  mlb.py  mlb_advanced.py  mlb_bullpen.py  mlb_context.py  mlb_people.py  mlb_stats.py  mlb_weather.py  ncaaf.py  nfl.py  odds.py  theoddsapi.py
velocity/models/: __init__.py  game_mlb.py  game_ncaaf.py  game_nfl.py  game_scores.py  mlb_build.py  props.py  props_mlb.py  run_environment.py  simulate.py  simulate_baseball.py
velocity/report/: __init__.py  card_html.py  cards.py  park_factors.py  results.py  scorecard.py  slate_xlsx.py
velocity/store/: __init__.py  io.py  pit.py  schema.py
velocity/util/: __init__.py  seed.py
velocity/wagering/: __init__.py  bet_log.py  devig.py  edge.py  live.py  odds.py  portfolio.py  props_slate.py  slate.py  staking.py
