[project]
name = "velocity"
version = "0.1.0"
description = "NFL & NCAAF game and player-prop projection and wagering system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "duckdb>=1.0",
    "pandera>=0.20",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "pandas-stubs>=2.1",
]
# Live data providers (network). Not needed for the offline test suite.
# NFL data is fetched directly from nflverse's public files (no extra deps);
# NCAAF uses the cfbd client.
ingest = [
    "cfbd>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["velocity"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["velocity", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.per-file-ignores]
# The card renderer is HTML/CSS string templating: long inline style and markup
# lines are inherent and clearer unwrapped than split mid-tag.
"velocity/report/card_html.py" = ["E501"]

[tool.mypy]
# Target 3.12 for type analysis: newer numpy stubs use PEP 695 `type` statements
# that mypy rejects under a 3.11 target. Runtime 3.11 support is proven by the
# pytest matrix; our code uses no 3.12-only syntax.
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
files = ["velocity"]

[[tool.mypy.overrides]]
module = ["duckdb", "pandera.*", "cfbd", "openpyxl.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["velocity"]
branch = true
